k8s/circuit-breaker/envoy-config-circuit.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: k8s-envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 80 }
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { host_rewrite: kubernetes.default.svc, cluster: service_k8s }
              http_filters:
              - name: envoy.router
      clusters:
      - name: service_k8s
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        circuit_breakers:
          thresholds:
            max_connections: 1
            max_pending_requests: 1
            max_requests: 1
        load_assignment:
          cluster_name: service_k8s
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: kubernetes.default.svc
                    port_value: 443
        tls_context:
          sni: kubernetes.default.svc
